# Investment-Client

./: .gitignore  CMakeLists.txt  Context.cpp  Context.h  MainWindow.cpp  MainWindow.h  context.cpp  context.h  login_window.cpp  login_window.h  main.cpp  main_window.cpp  main_window.h  request.cpp  request.h  styles.qss
Dialoges/: BuyStocksWindow.cpp  BuyStocksWindow.h  CMakeLists.txt  LoginWindow.cpp  LoginWindow.h  MenuWindow.cpp  MenuWindow.h  RegisterWindow.cpp  RegisterWindow.h  SellStocksWindow.cpp  SellStocksWindow.h  login_window.cpp  login_window.h
Models/: CMakeLists.txt  Stock.cpp  Stock.h  User.cpp  User.h
Pages/: CMakeLists.txt  ExchangeGlassPage.cpp  ExchangeGlassPage.h  UserStocksPage.cpp  UserStocksPage.h
Requests/: CMakeLists.txt  Request.cpp  Request.h
